--- a/client/k_admin.html
+++ b/client/k_admin.html
@@ -44,60 +44,62 @@
 	{{/if}}
 
 	{{#if currentCollection}}
-		{{#if actionCenter}}
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="panel" id="kAdminActionCenter">
-						<div class="panel-body">
-							{{#if actionCenterCheck 'create'}}
-								{{#if collection.templates.new }}
-									{{> DynamicTemplate template=collection.templates.new.name }}
-								{{else}}
-									<h3>Create</h3>
-									{{#if nonautoform}}
-										<p>Custom Create</p>
+		<div id="kAdminActionCenter">
+			{{#if actionCenter}}
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="panel">
+							<div class="panel-body">
+								{{#if actionCenterCheck 'create'}}
+									{{#if collection.templates.new }}
+										{{> DynamicTemplate template=collection.templates.new.name }}
 									{{else}}
-										{{> quickForm collection=currentCollection id="kAdminForm" type="insert" omitFields=omitFieldsForCreate	}}
+										<h3>Create</h3>
+										{{#if nonautoform}}
+											<p>Custom Create</p>
+										{{else}}
+											{{> quickForm collection=currentCollection id="kAdminForm" type="insert" omitFields=omitFieldsForCreate	}}
+										{{/if}}
 									{{/if}}
 								{{/if}}
-							{{/if}}
-							{{#if actionCenterCheck 'read'}}
-								{{#if collection.templates.view }}
-									{{> DynamicTemplate template=collection.templates.view.name data=currentDoc }}
-								{{else}}
-									<h3>View</h3>
-									<pre>{{ formattedCurrentDoc }}</pre>
-								{{/if}}
-							{{/if}}
-							{{#if actionCenterCheck 'update'}}
-								{{#if collection.templates.edit }}
-									{{> DynamicTemplate template=collection.templates.edit.name data=currentDoc }}
-								{{else}}
-									<h3>Update</h3>
-									{{#if nonautoform}}
-										<p>Custom Update</p>
+								{{#if actionCenterCheck 'read'}}
+									{{#if collection.templates.view }}
+										{{> DynamicTemplate template=collection.templates.view.name data=currentDoc }}
 									{{else}}
-										{{> quickForm collection=currentCollection id="kAdminForm" type="update" doc=currentDoc omitFields=omitFieldsForEdit}}
+										<h3>View</h3>
+										<pre>{{ formattedCurrentDoc }}</pre>
 									{{/if}}
 								{{/if}}
-							{{/if}}
-							{{#if actionCenterCheck 'delete'}}
-								<h3>Delete</h3>
-									{{#quickRemoveButton collection=currentCollection _id=currentDoc._id onSuccess=deleteSuccess onError=deleteError class="btn btn-danger btn-block"}}
-										Confirm Deletion
-									{{/quickRemoveButton}}
-								<br />
-							{{/if}}
-							{{#if actionCenterCheck 'custom'}}
-								{{> DynamicTemplate template=customAction data=currentDoc }}
-								<br />
-							{{/if}}
-							<button id="cancelAction" class="btn btn-danger btn-block">Cancel</button>
+								{{#if actionCenterCheck 'update'}}
+									{{#if collection.templates.edit }}
+										{{> DynamicTemplate template=collection.templates.edit.name data=currentDoc }}
+									{{else}}
+										<h3>Update</h3>
+										{{#if nonautoform}}
+											<p>Custom Update</p>
+										{{else}}
+											{{> quickForm collection=currentCollection id="kAdminForm" type="update" doc=currentDoc omitFields=omitFieldsForEdit}}
+										{{/if}}
+									{{/if}}
+								{{/if}}
+								{{#if actionCenterCheck 'delete'}}
+									<h3>Delete</h3>
+										{{#quickRemoveButton collection=currentCollection _id=currentDoc._id onSuccess=deleteSuccess onError=deleteError class="btn btn-danger btn-block"}}
+											Confirm Deletion
+										{{/quickRemoveButton}}
+									<br />
+								{{/if}}
+								{{#if actionCenterCheck 'custom'}}
+									{{> DynamicTemplate template=customAction data=currentDoc }}
+									<br />
+								{{/if}}
+								<button id="cancelAction" class="btn btn-danger btn-block">Cancel</button>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		{{/if}}
+			{{/if}}
+		</div>
 		<div class="panel">
 			<div class="panel-body">
 				<div class="row">
